--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="margin-right: 30px;"></button>
                                 </div>
                                 <div class="modal-body">
-                                    <p>Welcome to the Bootstrap Showcase!  We are thrilled <br> to present to you the power and versatility  of <br> Bootstrap - the leading front-end framework for web <br> development. With Bootstrap, creating stunning <br> and responsive websites has never been easier.</p>
+                                    Welcome to the Bootstrap Showcase!  We are thrilled <br> to present to you the power and versatility  of <br> Bootstrap - the leading front-end framework for web <br> development. With Bootstrap, creating stunning <br> and responsive websites has never been easier.
                                 </div>
                             </div>
                         </div>
@@ -150,6 +150,8 @@
                                     <p>CSS is responsible for the presentation and styling of web pages. It enables developers to control the layout, colors, fonts, and overall appearance of the content defined in HTML. With CSS3, advanced features like animations, transitions, and responsive design can be implemented, ensuring a visually appealing and interactive user experience across various devices.</p>
                                 </div>
                             </div>
+                        </div>
+                        <div class="accordion-item">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"                                   data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
                                     Accordion item 3 - JavaScript
                                 </button>
@@ -158,6 +160,8 @@
                                     <p>JavaScript is a versatile programming language that brings interactivity and dynamic functionality to frontend development. With JavaScript, developers can add event handling, perform DOM manipulation, and create complex interactions, making web pages more engaging and user-friendly. Additionally, frameworks like React, Angular, and Vue.js have gained popularity, simplifying the development of interactive and scalable frontend applications.</p>
                                 </div>
                             </div>
+                        
+                      </div>
                         </div>
                     </div>   
                 </div>
