--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="row justify-content-betwen">
+            <div class="row justify-content-betwen align-items-center">
                 <div class="col-xl-1 col-md-1">
                     <img src="img/logo.png" class="logo">
                 </div>
@@ -86,7 +86,7 @@
                             <div class="modal-content col-xl-5 col-md-10">
                                 <div class="modal-header">
                                     <h4>Modal window</h4>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="margin-right: 30px;"></button>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
                                     Welcome to the Bootstrap Showcase!  We are thrilled <br> to present to you the power and versatility  of <br> Bootstrap - the leading front-end framework for web <br> development. With Bootstrap, creating stunning <br> and responsive websites has never been easier.
@@ -182,4 +182,4 @@
     
     
 </body>
-</html>
+</html>    
